# Client_Server

./: CMakeLists.txt
Client(Program1)/: CMakeLists.txt
Client(Program1)/include/: BlockingBuffer.hpp  Client.hpp  ClientApplication.hpp  Utils.hpp
Client(Program1)/src/: Client.cpp  ClientApplication.cpp  main.cpp
Server(Program2)/: CMakeLists.txt
Server(Program2)/include/: Server.hpp  ServerApplication.hpp  Utils.hpp
Server(Program2)/src/: Server.cpp  ServerApplication.cpp  main.cpp
